add new blockchain metrics
